--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="icon" href="https://cdn.layeredy.com/uptimematrix/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
+  <meta name="description" content="Get up-to-date information on the status of Layeredy's services.">
+  <meta property="og:title" content="UptimeMatrix">
+  <meta property="og:description" content="Uptime monitoring without pain.">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
     <div class="announcement-bar">
