Change "Coming in 2025!" to "Early access and testing just started!"

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="announcement-bar">
-        Coming in 2025! Check out our <a href="https://www.layeredy.com/uptime-monitoring/roadmap/">roadmap</a>
+        Early access and testing just started! Check out our <a href="https://www.layeredy.com/uptime-monitoring/roadmap/">roadmap</a>
     </div>
     <div class="container">
         <header>
