Update announcement bar to use form site

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="announcement-bar">
-        Early access and testing just started! Check out our <a href="https://www.layeredy.com/uptime-monitoring/roadmap/">roadmap</a>
+        Early access and testing just started! Request access <a href="https://forms.gle/FSQK8jjcJKxSaMkU8">here</a>
     </div>
     <div class="container">
         <header>
